# OS

./: .gitignore  .gitmodules  LICENSE  Make.defaults  Make.image  Make.require  Make.rules  Makedefs  Makefile.in  README.md  configure  configure.ac
bootloader/: Makefile
bootloader/x86/: Makefile
bootloader/x86/BIOS/: Makefile
bootloader/x86/BIOS/Stage1/: Makefile  link.ld
bootloader/x86/BIOS/Stage1/src/: CheckDiskLBAExtension.S  ClearScreen.S  PrintString.S  ReadDisk.S  Stage1.S
bootloader/x86/BIOS/Stage2/: Makefile  link.ld
bootloader/x86/BIOS/Stage2/src/: CheckA20.S  PrintString.S  Stage2.S
docs/: Makefile  OS.tex  README.md
docs/Bootloader/: Bootloader.tex
docs/Bootloader/BIOS/: BIOS.tex  gpt.tex  mbr.tex  memory_layout.tex  stage_1.tex  stage_2.tex
docs/Bootloader/EFI/: EFI.tex  boot_efi.tex  gpt.tex  mbr.tex
docs/Disk/: Disk.tex
docs/Disk/GPT/: GPT.tex  header.tex  layout.tex  partition_attribute_bits.tex  partition_entry.tex  protective_header.tex
docs/Disk/MBR/: MBR.tex  header.tex  layout.tex  partition_entry.tex
docs/Macros/: Macros.tex  bytefield.tex  footnote.tex
docs/Title/: Title.tex
toolchain/: .gitignore  Make.binutils  Make.gcc  Make.mingw  Makefile  README.md
toolchain/make/: fileSize.sh  fileSizeBytes.sh  fileSizeSectors.sh
toolchain/patches/binutils/: all-gdb_doc_Makefile.in.patch
toolchain/patches/gcc/: all-libstdc++-v3_include_Makefile.in.patch
toolchain/patches/mingw/: i686-w64-mingw32-mingw-w64-libraries_winpthreads_src_clock.c.patch
